--- a/templates/etc/default/apf-firewall.j2
+++ b/templates/etc/default/apf-firewall.j2
@@ -7,4 +7,4 @@
 
 # Configure APF editing /etc/apf-firewall files (conf.apf is the principal config files)
 # Modify to RUN="yes" when you are ready
-RUN="{{ apf-firewall_enabled }}"
+RUN="{{ apf_firewall_enabled }}"
